# embit

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  constraints-dev.txt  pyproject.toml
.github/: CODEOWNERS  dependency-review-reviewed-purls.txt
.github/codeql/: codeql-config.yml
.github/scripts/: require-reviewed-dependencies.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  package-content-verification.yml  release.yml
docs/: README.md  package-content-policy.md
secp256k1/: README.md
src/embit/: bech32.py  bip352.py  transaction.py
src/embit/descriptor/: __init__.py  descriptor.py  sp.py
src/embit/liquid/: descriptor.py  pset.py  transaction.py
src/embit/silent_payments/: bip352.py
src/embit/util/: ctypes_secp256k1.py  key.py  py_secp256k1.py  secp256k1.py
tests/tests/: test_bech32.py  test_bindings.py  test_bip352.py  test_ecc.py  test_ecdh.py  test_liquid.py  test_sp_descriptor.py  test_threading.py
tools/: generate_release_sbom.py  package_inspect.py  verify_github_actions_pins.py  verify_package_artifacts.py
