[build-system]
requires = [
    "setuptools==80.9.0",
    "wheel==0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "embit"
version = "0.8.0"
description = "A minimal bitcoin library for MicroPython and CPython 3.10+ with a focus on embedded systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Stepan Snigirev", email = "snigirev.stepan@gmail.com"},
]
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/diybitcoinhardware/embit"
Issues = "https://github.com/diybitcoinhardware/embit/issues"
Changelog = "https://github.com/diybitcoinhardware/embit/releases"
Security = "https://github.com/diybitcoinhardware/embit/security"
Documentation = "https://github.com/diybitcoinhardware/embit/tree/master/docs"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "requests", # for integration tests
    "mypy",
    "black",
    "ruff",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "S"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.exclude-package-data]
"*" = [
    "*.so",
    "*.dll",
    "*.dylib",
    "*.pth",
    "sitecustomize.py",
    "usercustomize.py",
    "*.egg",
    "*.whl",
    "*.tar.gz",
    "*.egg-info/*",
    "*.dist-info/*",
]
embit = [
    "util/prebuilt/*",
]


[tool.pytest.ini_options]
addopts = "--cov=embit"
testpaths = [
    "tests/tests",
]

[tool.coverage.run]
omit = [
    "*/liquid/*",
]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false
